name:                yesod-purescript-example
version:             0.1.0.0
author:              Phil Freeman
maintainer:          paf31@cantab.net
build-type:          Simple
cabal-version:       >=1.10

executable yesod-purescript-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, data-default, yesod-core, yesod-purescript
  default-language:    Haskell2010
